日志打印优化